feat: add group Run on Kato
